--- a/Crypto_Clustering.ipynb
+++ b/Crypto_Clustering.ipynb
@@ -1205,7 +1205,7 @@
     "\n",
     "market_pca = pca.fit_transform(df_market_transformed)\n",
     "# View the first five rows of the DataFrame. \n",
-    "market_pca"
+    "market_pca[:5]"
    ]
   },
   {
